--- a/css/FunThingsToDoCSS.css
+++ b/css/FunThingsToDoCSS.css
@@ -80,8 +80,10 @@ h1 {
 
 .map {
 
-    width: 500px;
-    height: 400px;
+    /*width: 500px;*/
+    /*height: 400px;*/
+    width: 100px;
+    height: 80px;
     margin: 5px;
     color: #000000;
 }
