--- a/css/FunThingsToDoCSS.css
+++ b/css/FunThingsToDoCSS.css
@@ -82,8 +82,8 @@ h1 {
 
     /*width: 500px;*/
     /*height: 400px;*/
-    width: 100px;
-    height: 80px;
+    width: 500px;
+    height: 400px;
     margin: 5px;
     color: #000000;
 }
@@ -95,4 +95,8 @@ table, .table {
 
 td {
     color: #a99b7a;
+}
+
+.funThingCell {
+    width: 500px;
 }
